Ticket #15710: fixed mobile version alignment

--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -131,7 +131,7 @@
 
 @media only screen and (max-width: 800px) {
   .section--image-gallery .container {
-    height: 150vw;
+    height: 180vw;
   }
 
   .section--image-gallery-item:nth-of-type(3) {
@@ -151,7 +151,7 @@
 
 @media only screen and (max-width: 600px) {
   .section--image-gallery .container {
-    height: 138vw;
+    height: 162vw;
   }
 
   .section--image-gallery-heading h2 {
@@ -183,16 +183,23 @@
   }
 
   .section--image-gallery-item:nth-of-type(5) {
-    height: 35vw;
+    height: 20vw;
+    margin-right: 0;
   }
   .section--image-gallery-item:nth-of-type(6) {
-    height: 30vw;
+    height: 35vw;
   }
 
   .section--image-gallery-item:nth-of-type(7) {
-    height: 25vw;
+    height: 30vw;
   }
   .section--image-gallery-item:nth-of-type(8) {
+    height: 30vw;
+  }
+  .section--image-gallery-item:nth-of-type(9) {
+    height: 27vw;
+  }
+  .section--image-gallery-item:nth-of-type(10) {
     height: 25vw;
   }
 }
